AT-45 Fix workout library spacing problem

--- a/client/src/features/workout/workout-library/workout-library.component.scss
+++ b/client/src/features/workout/workout-library/workout-library.component.scss
@@ -14,7 +14,7 @@
   }
 
   &__cards-flex-container {
-    height: 45rem;
+    height: max-content;
     width: 95%;
     overflow-y: scroll;
     flex-wrap: wrap;
